Thu Mar  2 12:26:47 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:24:21 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:01:29 1995  John Gilmore  (gnu at toad.com)

	* sim_client.c:  Avoid <krb5/...> and <com_err.h> includes.

Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)

        * sim_client.c Call krb5_sendauth() with new calling convention.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Sep 29 22:45:52 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executable if library changes

