@@ -1,3 +1,8 @@
+Fri Mar 10 11:09:34 1995  Chris Provenzano (proven@mit.edu)
+
+        * sim_client.c Use new calling convention for krb5_mk_req(),
+		krb5_mk_priv(), and krb5_mk_safe().
+
 Thu Mar  2 12:26:47 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).
